[package]
name = "intentrace"
version = "0.7.4"
description = "intentrace is strace with intent, it goes all the way for you instead of half the way."
edition = "2021"
license = "MIT"
repository = "https://github.com/sectordistrict/intentrace"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
clone3 = "0.2.3"
colored = "3.0.0"
ctrlc = { version = "3.4.5", features = ["termination"] }
errno = "0.3.9"
nix = { version = "0.29.0", features = [
    "event",
    "mman",
    "net",
    "ptrace",
    "resource",
    "uio",
] }
pete = { version = "0.12.0" }
procfs = "0.17.0"
rustix = { version = "0.38.35", features = ["mm", "net", "rand"] }
syscalls = "0.6.18"
tabled = "0.18.0"
termbg = "0.6.1"
uzers = "0.12.1"

# [profile.release]
# lto = true
