[package]
name = "intentrace"
version = "0.9.3"
description = "intentrace is strace with intent, it goes all the way for you instead of half the way."
edition = "2021"
license = "MIT"
repository = "https://github.com/sectordistrict/intentrace"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
ctrlc = { version = "3.4.5", features = ["termination"] }
nix = { version = "0.29.0", features = ["ptrace", "uio"] }
pete = { version = "0.12.0" }
procfs = "0.17.0"
syscalls = "0.6.18"
tabled = "0.18.0"
termbg = "0.6.2"
unicode-segmentation = "1.12.0"
uzers = "0.12.1"

# [profile.release]
# lto = true
